static/shared.css
body {
	font-family: "Inter Variable", system-ui, sans-serif;
	margin: auto;
	max-width: 50rem;
	padding: 1rem 2rem;
	background-color: #fddada;
	color: #333;
	line-height: 1.6;
}

h1 {
	font-size: 2.5rem;
	line-height: 1.2;
	text-align: center;
	color: #faa3a4;
}

h1,
h2,
h3 {
	margin: 1rem 0 0.5rem;
}

p {
	margin: 0.5rem 0;
}

a {
	text-decoration: none;
	font-weight: bold;
	cursor: pointer;
	color: unset;
	transition: text-decoration 0.3s;
}

nav {
	display: flex;
	flex-wrap: wrap;
	border-bottom: 1px solid rgb(0 0 0 / 7%);
	align-items: center;
	gap: 0 1.2rem;
	margin: 1rem 0;

	a {
		display: inline-block;
	}
}

a:hover {
	text-decoration: underline;
	transition: text-decoration 0.3s;
}

a:visited {
	color: unset;
}

input,
button,
select,
textarea {
	font-family: inherit;
}

button {
	background-color: #80f;
	color: white;
	border: none;
	padding: 0.5rem 1rem;
	border-radius: 0.25rem;
	cursor: pointer;
	font-size: 1rem;
	transition:
		background-color 0.3s,
		transform 0.3s;
}

button:hover,
button:focus-visible {
	background-color: #691fd1;
	transform: scale(1.05);
}

.container {
	display: contents;
}

input,
textarea {
	padding: 0.5rem;
	border: 1px solid #ccc;
	border-radius: 4px;
	margin: 0.5rem 0;
	font-size: 1.2rem;
}

textarea {
	resize: none;
	display: block;
}

select {
	padding: 0.5rem;
	margin: 0.5rem 0;
	border: 1px solid #ccc;
	appearance: none;

	/* background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 24 24'%3E%3Cpath d='M7 10l5 5 5-5z'/%3E%3C/svg%3E")
		no-repeat right 0.75rem center; */
	border-radius: 5px;
	background-color: white;
	font-size: 1rem;
	transition: all ease 200ms;
}

select:hover,
select:focus-visible {
	background-color: rgb(250 250 250);
	transform: scale(1.01);
	cursor: pointer;
}

table {
	width: 100%;
	border-collapse: collapse;
	margin-bottom: 1rem;
}

th,
td {
	border: 3px solid #ddd;
	padding: 0.5rem;
	text-align: center;
}

th {
	background-color: #f3f3f3;
}

td:first-child {
	text-align: left;
}

